# movie_explorer

./: README.md  docker-compose.yaml
backend/: Dockerfile  README.md  alembic.ini  main.py  mock_data.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0603f8112de5_create_movie_explorer_tables.py  871596a3dbda_create_movie_explorer_tables.py  b67c2823db7d_create_movie_explorer_tables.py  b95c3da513ba_create_movie_explorer_tables.py  d2374a9deec6_create_movie_explorer_tables.py
backend/app/: main.py
backend/app/database/: db.py
backend/app/models/: movie.py
backend/app/routes/: actors.py  directors.py  genres.py  movies.py
backend/app/schemas/: movie.py
backend/tests/: conftest.py  test_actors.py  test_directors.py  test_genres.py  test_movies.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  vitest.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: ActorCard.tsx  DirectorCard.tsx  FilterBar.tsx  MovieCard.tsx
frontend/src/models/: movie.ts
frontend/src/pages/: ActorProfile.tsx  DirectorProfile.tsx  MovieDetail.tsx  Movies.tsx
frontend/src/styles/: card.css  filter.css  layout.css  movie-detail.css  profile.css
frontend/src/tests/: FilterBar.test.tsx  MovieCard.test.tsx  setupTests.ts
